# hpc

./: .gitignore  CMakeLists.txt
bench/: latency.md  process_context_switch.cpp  syscall.cpp  thread_context_switch.cpp
bench/context/: CMakeLists.txt  process_context_switch.cpp  readme.md  thread_context_switch.cpp
bench/ipc/: CMakeLists.txt  README.md  fifo_latency.cpp  latency_bench.sh  pipe_latency.cpp  pipe_throughput.cpp  shm.cpp  tcp_latency.cpp  tcp_local_latency.cpp  tcp_remote_latency.cpp  tcp_throughput.cpp  throughput_bench.sh  udp_latency.cpp  unix_latency.cpp  unix_throughput.cpp
example/: CMakeLists.txt
example/openmp/: CMakeLists.txt  approx_integral_omp.cpp  basic_omp.cpp  for_omp.cpp  lock_omp.cpp  makefile  master_single_omp.cpp  producer_consumer_omp.cpp  readme.md  sections_omp.cpp  sync_barrier_omp.cpp  sync_mutex_omp.cpp  task_omp.cpp
example/simd/: CMakeLists.txt  aligned_vector.cpp  alignment.cpp  note.txt
example/simd/avx/: branch.cpp  min_max.cpp  sub.cpp  vector_add.cpp  vector_add_loop_unwind.cpp  vector_multiply_256.cpp  vector_multiply_512.cpp
example/simd/sse2/: square_root.cpp
gbench/: CMakeLists.txt  bitfield_bench.cpp  cache_bench.cpp  char_array_map_bench.cpp  cold_time_bench.cpp  dense_hash_map_bench.cpp  dense_hash_map_main_bench.cpp  deque_vs_ringbuffer.cpp  makefile  ringbuffer_single_vs_batch.cpp  socket_bench.cpp  std_pow_bench.cpp  time_bench.cpp  various_int_map_bench.cpp
gpu/: readme.md  run.sh
gpu/learn/cmake_example/: CMakeLists.txt  atomic.cu  callback.cu  device_memory.cu  event.cu  graph.cu  index.cu  multi_device.cu  page_locked_host_memory.cu  perf.cu  shared_memory.cu  stream.cu
gpu/learn/cublas_example/: app.cpp  makefile  run.sh
gpu/learn/dynamic_parallel/: CMakeLists.txt  child.cu  makefile
gpu/learn/la/: CMakeLists.txt  mat_mul1_tiled.cu  vec_add1.cu  vec_add_unified_memory.cu  vec_add_unified_memory_prefetch.cu
gpu/learn/make_demo/: axpy.cu  makefile
gpu/learn/shared_lib/: CMakeLists.txt  a.cu  a.cuh  main.cpp  run.sh
gpu/learn/thrust_demo/: CMakeLists.txt  vector.cu
gpu/learn/thrust_demo/algo/: arbitrary_transformation.cu  reduce.cu  scan.cu  sort.cu  transform.cu  transform_reduce.cu
gpu/learn/thrust_demo/iter/: constant_iterator.cu  counting_iterator.cu  permutation_iterator.cu  transform_iterator.cu  zip_iterator.cu
guide/: compiler_optimization.md  data_oriented_design.md  general.md  hash_map.md  low_latency.md  rvo.md
guide/bad/: avoid_static_local_variable.cpp  std_function_allocate.cpp
guide/good/: allocate_first.cpp  calcuale _hash_once.cpp  data_denormalize.cpp  lambda.cpp  slow_path_removal.cpp  static_polymorphism.cpp  template_away_branch.cpp
guide/neutral/: inline_or_not.cpp
include/: dense_hash_map.h
include/simd/: simd_aligned_allocator.h
include/utils/: BenchHelper.h  Timer.h
src/simd/: simd_aligned_allocator.h
src/utils/: Timer.h
test/: CMakeLists.txt  TestDenseHashMap.cpp
